--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ bundler_args: "--binstubs --standalone --without documentation --path ../bundle"
 script: "bundle exec rake test"
 
 gemfile:
+  - gemfiles/sprockets_2_2.gemfile
   - gemfiles/sprockets_2_12.gemfile
   - gemfiles/sprockets_3_0.gemfile
   - gemfiles/rails_3_2.gemfile
